--- a/citronella-webapp/package.json
+++ b/citronella-webapp/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "install": "^0.13.0",
+    "npm": "^8.5.0",
+    "vee-validate": "^4.5.8",
+    "vue": "^3.0.0",
+    "vue-fontawesome": "^0.0.2",
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
