--- a/citronella-webapp/package.json
+++ b/citronella-webapp/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^0.26.0",
+    "bulma": "^0.9.3",
     "core-js": "^3.6.5",
     "install": "^0.13.0",
     "npm": "^8.5.0",
@@ -16,7 +20,8 @@
     "vue": "^3.0.0",
     "vue-fontawesome": "^0.0.2",
     "vue-router": "^4.0.12",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
